--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://mydbinstance1.cjismk0medih.eu-north-1.rds.amazonaws.com:3306/testdb?useSSL=false
-spring.datasource.username=adminM
-spring.datasource.password=Wacim08032019!
+spring.datasource.url=jdbc:mysql://solo-db.cjismk0medih.eu-north-1.rds.amazonaws.com:3306/solodb?useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=Wacim13092022
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
